--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	    id="bar"
 	    class="progress-bar"
 	    role="progressbar"
-	    style="width: 50%">
+	    style="width: 50%" 
+	    aria-valuemax="100">
 	  </div>
 	</div>
 
